# cokacctl

./: .gitignore  Cargo.toml  README.md  build.py  manage.ps1  manage.sh  report.by.claude.md  report.by.codex.md
builder/: executor.py  tools.py
dist_beta/: cokacctl-linux-aarch64  cokacctl-linux-x86_64  cokacctl-macos-aarch64  cokacctl-macos-x86_64
docs/: cokacctl-guide.md
issue/: 01-uninstall-missing-process-kill.md  02-log-contamination-false-success.md  03-start-status-contradiction.md  04-error-propagation-cascading-failure.md  05-is-any-running-trait-mismatch.md  README.md
src/: main.rs
src/cli/: install.rs  mod.rs  service.rs  uninstall.rs  update.rs
src/core/: config.rs  debug.rs  download.rs  mod.rs  platform.rs  version.rs
src/dashboard/: api.rs  assets.rs  mod.rs  server.rs  state.rs  tls.rs
src/dashboard/assets/: Dashboard.html
src/dashboard/assets/src/: app.jsx  data.jsx  icons.jsx  pages.jsx  widgets.jsx
src/service/: launchd.rs  mod.rs  systemd.rs  taskscheduler.rs
src/tui/: app.rs  draw.rs  event.rs  log_viewer.rs  mod.rs
