[package]
name = "cokacctl"
version = "1.0.10"
edition = "2021"
authors = ["cokac <monogatree@gmail.com>"]
description = "cokacdir installation and service manager"
license = "MIT"
repository = "https://github.com/kstost/cokacdir"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "io-util", "macros", "fs"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "cokacctl"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
